fixed up CSS formatting, added more background color, fixed nav bar formatting on smaller screen size

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,12 +1,15 @@
 /*Hex color palette*/
 :root {
     --primary: #cda542;
-    --secondary: #5542cd;
 }
 
 /*Scroll settings for page*/
 html {
     scroll-behavior: smooth;
+}
+
+body {
+    background-color: var(--primary);
 }
 
 /* Styling for main header at top of page */
@@ -47,10 +50,12 @@ header h6 {
 /*Nav bar styling*/
 nav ul {
     list-style-type: none;
+    height: 100px;
     margin: 0;
     padding: 0;
     display: flex;
     justify-content: flex-start;
+    align-items: center;
 
 }
 
@@ -82,7 +87,6 @@ nav {
 
 
 
-
 /*Styling for each section's header*/
 .section-heading {
     background-color: #000;
@@ -98,48 +102,52 @@ nav {
 
 /*main image positioning*/
 #top-photo {
-    margin: 0
-
+    margin: 0;
+    width: 100%;
 }
 
 #top-photo img {
-    max-width: 100%;
+    width: 100%;
     margin: 0;
-    display: flex;
 
 }
 
 #about-me {
-    height: 800px;
+    height: 850px;
     width: 100%;
-    background-color: var(--primary)
+    background-color: var(--primary);
+    
 }
 
 #about-me h2 {
     background-color: var(--primary);
     color: #000;
 }
+#about-me article {
+    height: 800px;
+    
+}
 
-#about-me-text img {
-    opacity: 0.25;
+#about-me article img {
+    
     border: 3px solid #000;
     display: block;
     max-width: 480px;
     max-height: 550px;
-    width: 25%;
-    height: 25%;
+    width: 30%;
+    height: 30%;
     margin: 0;
 }
 
 article p {
-    font-family: "Corbel";
-    font-size: 20px;
+    font-family: "Roboto", sans-serif;
+    font-size: 24px;
     color: #000;
     margin: 0;
     display: flex;
     justify-content: flex-end;
-    width: 75%;
-    min-width: 400px;
+    width: 50%;
+    min-width: 500px;
 }
 
 #portfolio {
@@ -215,10 +223,17 @@ article p {
     padding-bottom: 100px;
 }
 
-@media screen and (max-width: 768px;) {
-    body {
-        
+@media screen and (max-width: 768px) {
+    nav ul {
+        list-style-type: none;
+        height: 800px;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        align-items: center;
     }
         
     }
-}
+
